--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-.stack-work
-.cabal-sandbox
-cabal.sandbox.config
-dist
-fuzzyset.cabal
+.stack-work/*
+*~
+*#
+/dist
+\#*#
+.#*
+/dist-newstyle
+cabal.project.local
+*.json
+*.png
+TAGS
+.ghc*
+bench/*.html
+report.html
+*.prof
+*.hp
+*.ps
+*.aux
+*.png
+.knit-haskell-cache
+.knit-haskell-cache2
